<resources>
    <string name="app_name">Hobiland - GY</string>
    <string name="edittext_email">Email</string>
    <string name="edittext_password">Şifre</string>
    <string name="edittext_password_again">Şifre Tekrarı</string>
    <string name="button_login">Giriş Yap</string>
    <string name="button_register">Kayıt Ol</string>
    <string name="not_registered">Üye değil misiniz?</string>
    <string name="you_registered">Zaten üye misiniz?</string>
    <string name="button_login_google">Google ile Giriş Yap</string>
    <string name="enter_message">Mesajınızı giriniz.</string>
    <string name="new_chat">Yeni Sohbet</string>

    <string name="action_settings">Ayarlar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="nav_profile">Profil</string>
    <string name="nav_hobies">Hobiler</string>
    <string name="nav_chat">Sohbet</string>

    <string name="nav_comment">Deneyimler</string>
    <string name="nav_quit">Çıkış</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
