<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile"/>
        <item
            android:id="@+id/nav_hobbies"
            android:icon="@drawable/ic_hobbies"
            android:title="@string/nav_hobies"/>
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/nav_chat"/>
        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/ic_comment"
            android:title="@string/nav_comment"/>
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_quit"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/nav_quit" />
    </group>
</menu>
