<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tr.firefighters.hobilandgelecegiyazanlar.Fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edittext_email"
            android:inputType="textEmailAddress"
            android:focusable="true"/>

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edittext_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edittext_password_again"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_login_selector"
            android:text="@string/button_register"
            android:textColor="@color/custom_button_text" />

        <TextView
            android:id="@+id/textView_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/you_registered" />

    </LinearLayout>

</FrameLayout>
