<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tr.firefighters.hobilandgelecegiyazanlar.Fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edittext_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/edittext_password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_login_selector"
            android:text="@string/button_login"
            android:textColor="@color/custom_button_text" />

        <Button
            android:id="@+id/button_login_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_login_selector"
            android:text="@string/button_login_google"
            android:textColor="@color/custom_button_text"
            android:drawableLeft="@drawable/ic_social_google"/>

        <TextView
            android:id="@+id/textView_not_registered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/not_registered" />
    </LinearLayout>
</FrameLayout>
